Products.CMFCore Changelog
==========================

2.3.0-alpha (unreleased)
------------------------

- tools: Converted several tools into utilities.
  ActionsTool, CatalogTool, CookieCrumbler, MemberDataTool, MembershipTool,
  RegistrationTool, SkinsTool, URLTool and WorkflowTool are now local
  utilities.

- MemberDataTool: Changed property modes to 'w' and added 'fullname' property.

- setup handlers: Improved content type registry handler.
  The 'insert-before' and 'insert-after' directives are now supported.

- Optimize `SkinnableObjectManager.__getattr__` to short circuit view (`@`) and
  traverser (`+`) lookup in addition to `_` and `aq_`.

- Avoid a shallow dependency on `Products.ZReST`.

- Fixed types tool test to only test creation for type infos.

- utils: Fixed '_OldCacheHeaders' and '_FSCacheHeaders' methods.
  DateTimeErrors caused by invalid HTTP headers were not caught.

- setup handlers: Added export/import support for member data tool settings.

- MemberDataTool: Fixed tool initialization.
  The default boolean and date property values were not set correctly.

- MemberDataTool: Modified 'setProperties' method.
  It now can be used by user managers as well.

- MembershipTool: Added 'isMemberAccessAllowed' method.
  If you don't have the 'Manage users' permission for the membership tool, you
  shouldn't have write access to other members.

- MemberDataTool: Removed obsolete MemberData factory lookup.
  This feature was added in CMF 2.2, but now the MemberAdapter should be
  overridden instead.

- MemberDataTool: Split up MemberData class.
  The old MemberData API is now provided by the new MemberAdapter. The
  persistent MemberData objects are just used for storing member data.

- interfaces: Added 'IMember' interface.

- permissions: Marked 'setDefaultRoles' as deprecated.

- Require at least Zope 2.13.4.

- DirectoryView: Added 'bobobase_modification_time' method to FSObject.