@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- exportimport.tests.test_mailhost:  Accomodate 'smtp_queue' and
+  'smtp_queue_directory' exports (newly added in GenericSetup).
+
 - tools: Converted several tools into utilities.
   ActionsTool, CatalogTool, CookieCrumbler, MemberDataTool, MembershipTool,
   RegistrationTool, SkinsTool, URLTool and WorkflowTool are now local
